--- a/modules/collections/client/views/list-collections.client.view.html
+++ b/modules/collections/client/views/list-collections.client.view.html
@@ -1,19 +1,37 @@
-<!-- <section>
+<section>
   <div class="page-header">
     <h1>Collections</h1>
   </div>
   <div class="list-group">
-    <a ng-repeat="collection in vm.collections"
-       ui-sref="collections.view({ collectionId: collection._id })"
-       class="list-group-item">
-       <span ng-if="collection.user" ng-bind="collection.user.displayName"></span>
-        <span ng-if="!collection.user">Deleted User</span>
-      </small>
-      <h4 class="list-group-item-heading" ng-bind="collection.name"></h4>
-   
-    </a>
-  </div> -->
-  <section>
+    <table class="table table-striped table-bordered table-hover" id="sample_2">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Image Width</th>
+          <th>Image Height</th>
+          <th>Priority</th>
+          <th>Key</th>
+          <th>Data Filter</th>
+          </tr>
+      </thead>
+      <tbody>
+       <tr ng-repeat="collections in vm.collections">
+        <td>{{ collections.title }}</td>
+        <td>{{ collections.imageWidth }}</td>
+        <td>{{ collections.imageHeight }}</td>
+        <td>{{ collections.priority }}</td>
+        <td>{{ collections.key }}</td>
+        <td>
+          
+        <a class="btn btn-primary" ng-click="vm.remove(collections);">
+          <i class="glyphicon glyphicon-trash"></i>
+        </a>
+        </td>
+      </tr>
+  </tbody>
+</table>
+  </div>
+  <!-- <section>
   <div class="page-header">
     <h1>Collections</h1>
     </div>
@@ -21,11 +39,14 @@
     <table>
       <tr ng-repeat="userdata in vm.getUrlData.data.items" ui-sref="collections.view({ collectionId: collection._id })"
       class="list-group-item">
-        <td>{{ $index }}-{{ userdata.address }}</td>
+        <td>{{ $index }}-{{ userdata.title }}</td>
+        
       </tr>
     </table>
   </div>
   <div class="alert alert-warning text-center" ng-if="vm.collections.$resolved && !vm.collections.length">
     No Collections yet, why don't you <a ui-sref="collections.create">create one</a>?
   </div>
-</section>
+</section> -->
+
+
