--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -7,8 +7,11 @@
                 height="30" style="float:left;" />  </a>
               </div>
             <ul class="nav navbar-nav" ng-if="menu.shouldRender(authentication.user);">
-              <li ng-repeat="item in menu.items | orderBy: 'position'" ng-hide="!authentication.user" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
-                <a ng-switch-when="dropdown" class="dropdown-toggle" dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
+              <li ng-repeat="item in menu.items | orderBy: 'position'" uib-dropdown ng-hide="!authentication.user" 
+              ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" 
+              ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" 
+              class="{{item.class}}" dropdown="item.type === 'dropdown'">
+                <a ng-switch-when="dropdown" uib-dropdown-toggle class="dropdown-toggle" dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
                 <ul ng-switch-when="dropdown" class="dropdown-menu">
                   <li ng-repeat="subitem in item.items | orderBy: 'position'" ng-if="subitem.shouldRender(authentication.user);" ui-sref-active="active">
                     <a ui-sref="{{subitem.state}}" ng-bind="subitem.title"></a>
