--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -37,7 +37,7 @@
 
 <body class="ng-cloak">
   <header ng-include="'/modules/core/client/views/header.client.view.html'" ></header>
-  <section class="content">
+  <section>
     <section class="container">
       {% block content %}{% endblock %}
     </section>
