--- a/modules/collections/client/views/view-collection.client.view.html
+++ b/modules/collections/client/views/view-collection.client.view.html
@@ -1,7 +1,12 @@
 <section>
   <div class="page-header">
-    <h1 ng-bind="vm.collection.name"></h1>
+    <h1 ng-bind="vm.collection.title"></h1>
   </div>
+  <table>
+    <tr ng-repeat="(key,value) in vm.collection">
+      <td>{{ key }} - {{ value }}</td>
+    </tr>
+  </table>
   <div class="pull-right"
        ng-show="vm.collection.isCurrentUserOwner">
     <a class="btn btn-primary"
@@ -12,13 +17,7 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
-    <!-- <small>
-    <em class="text-muted">
-      Posted on
-      <span ng-bind="vm.collection.created | date:'mediumDate'"></span>
-      by
-      <span ng-if="vm.collection.user"
-            ng-bind="vm.collection.user.displayName"></span> -->
+    
       <span ng-if="!vm.collection.user">Deleted User</span>
     </em>
   </small>
