--- a/modules/collections/client/views/form-collection.client.view.html
+++ b/modules/collections/client/views/form-collection.client.view.html
@@ -25,7 +25,7 @@
             
               <label class="control-label" for="productdimension">Product_Dimension_config</label>
               <input name="productdimension" type="text" ng-model="vm.collection.product_dimension_config" id="productdimension" class="form-control" placeholder="Productdimension" required>
-             
+             <div class="form-group col-md-12">
                 <label class="control-label" for="Datafilter">Data Filter</label>
                 
                 <div isteven-multi-select 
@@ -37,8 +37,10 @@
                 is-disabled = false
                 helper-elements="none all">
             </div>
+            </div>
+
             
-                  <div class="form-group">
+                  <div class="form-group col-md-12">
                       <button type="submit" class="btn btn-default">{{vm.collection._id ? 'Update' : 'Create'}}</button>
                     </div>
             
