--- a/modules/datafilters/client/views/form-datafilter.client.view.html
+++ b/modules/datafilters/client/views/form-datafilter.client.view.html
@@ -9,9 +9,14 @@
           <label class="control-label" for="name">Name</label>
           <input name="name" type="text" ng-model="vm.datafilter.name" id="name" class="form-control" placeholder="Name" required>
          </div>
+
+         <label class="control-label" for="name">Field</label>
+         <input name="name" type="text" ng-model="vm.datafilter.name" id="name" class="form-control" placeholder="Name" required>
+        </div>
+
          <div class="form-group" show-errors>
             <label class="control-label" for="type">Type</label>
-            <input name="type" type="text" ng-model="vm.datafilter.type" id="type" class="form-control" placeholder="Name" required>
+            <select ng-model="vm.datafilter.type" id="type" class="form-control" placeholder="Name" required>
             </div>
 
               
